syntax = "proto2";

package io.netty.example.pb.gen;

option optimize_for = SPEED;
//option java_package = "io.netty.example.pb.gen";
option java_package = "io.netty.example.pb.netty";
option java_outer_classname = "MyDataInfo";
message MyMessage {
    enum DataType {
        StudentType = 1;
        DogType = 2;
        CatType = 3;
    }
    required DataType data_type = 1;

    // 某一时刻只有一个
    oneof dataBody {
        Student student = 2;
        Dog dog = 3;
        Cat cat = 4;
    }
}

message Student {
    required string name = 1;
    optional int32 age = 2;
    optional string address = 3;
}

message Dog {
    required string name = 1;
    optional int32 age = 2;
}

message Cat {
    required string name = 1;
    optional int32 city = 2;
}
